--- a/css/layout.css
+++ b/css/layout.css
@@ -4,15 +4,11 @@ body {
 }
 
 form {
+  display: block;
   margin: 0 auto;
 }
 
-label {
+form>label {
   display: inline-block;
   width: 30%;
-}
-
-.dataTable {
-  overflow-x: auto;
-  width: 100%;
 }
